src/test/deca/context/valid/provided/ContextSansObjet/OperationsArithmetiques/PlusIntFloat.deca
//Description :
//	Vérification contextuelle de l'opérateur + avec des variables int et float
//
//Résultats :
//	ok
{
    float x = 1.0;
    float y = 1 + 2.3;
}