src/test/deca/context/invalid/ContextSansObjet/OperationsArithmetiques/PlusIntFloat_Int.deca
//Description :
//	Vérification contextuelle du type de sortie de + avec pour entrée <float, int>
//
//Résultats :
//  Erreur contextuelle
//	ligne 9 : type incompatible

{
    int x = 3.0+1;
}